scrollbar fix

--- a/jamestarnold-portfolio-app/src/app/home/home.component.scss
+++ b/jamestarnold-portfolio-app/src/app/home/home.component.scss
@@ -1,3 +1,6 @@
+:root {
+  background-color: black;
+}
 section {
   position: relative;
   height: 100vh;
@@ -16,7 +19,7 @@ section {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 101vh;
   z-index: -1;
   background-size: cover;
   background-position: center;
