--- a/jamestarnold-portfolio-app/src/styles.scss
+++ b/jamestarnold-portfolio-app/src/styles.scss
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0 !important;
+  scrollbar-width: none; /* Firefox */
+  overflow-x: hidden;
+  background-color: black;
+}
 
 body::-webkit-scrollbar {
   display: none;
@@ -7,8 +13,5 @@ body::-webkit-scrollbar {
 html,
 body {
   margin: 0;
-
-  // scrollbar-width: none; /* Firefox */
-  overflow-x: hidden;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
